css/main.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 70px;
  padding-bottom: 20px;
}

.altBrand {
  color: #6DA0FA;
}

.navbar {
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
}

.navbar .container {
  margin-top: 10px;
}

.col-md-4 h2, .col-md-8 h2 {
  background-color: rgb(109, 160, 250);
  color: rgb(224, 245, 255);
  padding: 7px 14px;
  margin-top: 0;
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
}

.col-md-4 h2 {
  background-color: rgb(109, 160, 250);
  color: rgb(224, 245, 255);
}

.col-md-8 h2 {
  background-color: #555;
  color: #eee;
}

.contact {
  background-color: #555;
  color: #bbb;
  font-size: 16px;
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.5);
}

@media (max-width: 991px) {
  .contact {
    margin: 10px 15px;
  }
}
.contact h2 {
  color: #EEE;
  background: none;
  padding-left: 0;
  padding-right: 0;
  box-shadow: none;
  border-bottom: 1px solid #eee;
}

.contact .field,
.contact a, .contact a:hover, .contact a:visited, .contact a:active {
  color:#EEE;
  font-weight: bold;
}

.subtitle {
  font-style:italic;
  font-size: 18px;
  color: #888;
  position: absolute;
  left: 60px;
  top: 0px;
  font-family: "Times New Roman", Times, serif;
}

